[gd_scene load_steps=7 format=3 uid="uid://dm2lfii4ja50u"]

[ext_resource type="Script" uid="uid://dkf332evujfry" path="res://scripts/enemy.gd" id="1_l5lq6"]
[ext_resource type="Texture2D" uid="uid://dlgp3b0ew0gn0" path="res://textures/ghost.png" id="2_bbnym"]
[ext_resource type="Texture2D" uid="uid://ch1172ye7m04b" path="res://textures/fast_ghost.png" id="3_5mfnq"]
[ext_resource type="Texture2D" uid="uid://d270rwinsusrs" path="res://textures/tanky_ghost.png" id="4_lv6vd"]
[ext_resource type="Texture2D" uid="uid://cyj46cqg3ux8k" path="res://textures/tank_ghost.png" id="5_sv5gc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lnu2h"]
radius = 0.25
height = 0.95

[node name="Ghost" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_l5lq6")
metadata/enemy = true
metadata/health = 3.0
metadata/max_health = 3.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_lnu2h")
debug_color = Color(0, 0.6, 0.69803923, 1)

[node name="ghost" type="Sprite3D" parent="."]
transform = Transform3D(0.333, 0, 0, 0, 0.333, 0, 0, 0, 0.333, 0, 0, 0)
billboard = 1
texture = ExtResource("2_bbnym")

[node name="fast_ghost" type="Sprite3D" parent="."]
transform = Transform3D(0.333, 0, 0, 0, 0.333, 0, 0, 0, 0.333, 0, 0, 0)
visible = false
billboard = 1
texture = ExtResource("3_5mfnq")

[node name="tanky_ghost" type="Sprite3D" parent="."]
transform = Transform3D(0.333, 0, 0, 0, 0.333, 0, 0, 0, 0.333, 0, 0, 0)
visible = false
billboard = 1
texture = ExtResource("4_lv6vd")

[node name="tank_ghost" type="Sprite3D" parent="."]
transform = Transform3D(0.333, 0, 0, 0, 0.333, 0, 0, 0, 0.333, 0, 0, 0)
visible = false
billboard = 1
texture = ExtResource("5_sv5gc")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
